--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -9,6 +9,8 @@
     {% include "assets/css/inline.css" %}
   {% endset %}
   <style>{{ css | cssmin | safe }}</style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   {% set js %}
     {% include "assets/js/inline.js" %}
   {% endset %}
