--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -61,11 +61,6 @@ footer {
 	padding: 1em;
 }
 
-header {
-	display: flex;
-	justify-content: space-between;
-}
-
 footer {
 	color: var(--primary);
 	text-align: center;
@@ -93,7 +88,7 @@ header nav li {
 }
 
 header nav li a {
-	padding: 0 .5em;
+	padding: 0 .5em 0 0 ;
 }
 
 header nav li a[href]:not(:hover) {
@@ -181,5 +176,10 @@ button {
 @media screen and (min-width:768px) {
 	:root {
 		font-size: 1.1rem;
+	}
+	
+	header {
+		display: flex;
+		justify-content: space-between;
 	}
 }
