--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -25,7 +25,7 @@ body {
 
 h1 {
 	color: var(--secondary);
-	font-family: Ultra, serif;
+	font-family: 'Ultra', serif;
 	text-transform: uppercase;
 }
 
@@ -177,7 +177,7 @@ button {
 	:root {
 		font-size: 1.1rem;
 	}
-	
+
 	header {
 		display: flex;
 		justify-content: space-between;
