--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -65,6 +65,7 @@ footer {
 
 /* Header Nav */
 header nav ul {
+	margin: 0;
 	padding: 0;
 	list-style: none;
 }
@@ -75,6 +76,11 @@ header nav ul :first-child {
 
 header nav li {
 	display: inline-block;
+	margin: 0;
+}
+
+header nav li a {
+	padding: 0 .5em 0 0 ;
 }
 
 header nav li a[href]:not(:hover) {
