og mets, proper home page title

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -3,15 +3,19 @@
   <link rel="dns-prefetch" href="https://identity.netlify.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ renderData.title or title or metadata.title }}</title>
+  <meta property="og:title" content="{{ renderData.title or title or metadata.title }}">
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or metadata.description }}">
+  <meta property="og:description" content="{{ metaDescription or renderData.metaDescription or metadata.description }}">
+  <meta property="og:image" content="{{ url }}/static/img/SisterStreetStage-Apr-17-2021a.jpg">
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% set css %}
     {% include "assets/css/inline.css" %}
   {% endset %}
   <style>{{ css | cssmin | safe }}</style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Cardo&family=Ultra&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Ultra&display=swap" rel="stylesheet">
+  og:image  https://sisterstreetstage.com/static/img/SisterStreetStage-Apr-17-2021a.jpg
   {% set js %}
     {% include "assets/js/inline.js" %}
   {% endset %}
