--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -7,6 +7,8 @@
   <meta name="description" content="{{ metaDescription or renderData.metaDescription or metadata.description }}">
   <meta property="og:description" content="{{ metaDescription or renderData.metaDescription or metadata.description }}">
   <meta property="og:image" content="{{ metadata.url }}/static/img/SisterStreetStage-Apr-17-2021a.jpg">
+  <meta property="og:url" content="{{ metadata.url }}">
+  <meta property="twitter:image" content="{{ metadata.url }}/static/img/SisterStreetStage-Apr-17-2021a.jpg">
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% set css %}
     {% include "assets/css/inline.css" %}
