--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,12 +4,10 @@ section: post
 ---
 
 <article>
-  <h1>{{ title }}</h1>
   <p>
-    <small>
-      <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time> by <a href="/authors/{{ author | slug }}/">{{ author }}</a>
-    </small>
+      <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>
   </p>
+  <h1>{{ title }}</h1>
 
   {{ layoutContent | safe }}
 
