--- a/_includes/layouts/shows.njk
+++ b/_includes/layouts/shows.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-section: blog
-permalink: /blog/index.html
+section: shows
+permalink: /shows/index.html
 ---
 <h1>{{ title }}</h1>
 
