--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -25,5 +25,5 @@ section: post
 </article>
 
 <nav>
-  <a href="{{ '/blog/' | url }}">← Blog index</a>
+  <a href="{{ '/blog/' | url }}">← Shows index</a>
 </nav>
